# tern

./: completion.sh  dune-project  tern.opam
lib/: dune
test/: dune
